--- a/src/app/village/village.component.html
+++ b/src/app/village/village.component.html
@@ -31,6 +31,8 @@
           <input matInput placeholder="Adresse " formControlName="adresse" required>
         </mat-form-field>
       </div>
+    </div>
+    <div class="row " style="padding-left: 25px">
       <div class="form-group">
         <label class="control-label">Est Chef:</label>
         <mat-radio-group aria-label="Est Chef" formControlName="estchef">
@@ -40,7 +42,19 @@
       </div>
       <div class="form-group">
         <mat-form-field>
+          <input matInput placeholder="Numero abonnement" formControlName="numero" required>
+        </mat-form-field>
+      </div>
+    </div>
+      <div class="row " style="padding-left: 25px">
+      <div class="form-group">
+        <mat-form-field>
           <input matInput placeholder="Description  Abonnement " formControlName="description" required>
+        </mat-form-field>
+      </div>
+      <div class="form-group">
+        <mat-form-field>
+          <input matInput placeholder="Numero Compteur" formControlName="numerocompteur" required>
         </mat-form-field>
       </div>
     </div>
