--- a/src/app/facture/facture.component.html
+++ b/src/app/facture/facture.component.html
@@ -11,7 +11,7 @@
 
       <div class="form-group">
         <mat-form-field>
-          <input matInput placeholder="Numero compteur" formControlName="numCompteur" required (blur)="CompteurExist($event.target.value)">
+          <input matInput placeholder="Numero compteur" formControlName="numerocompteur" required (blur)="CompteurExist($event.target.value)">
         </mat-form-field>
       </div>
       <div class="form-group">
@@ -48,7 +48,7 @@
 
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close (click)="addFactureF()" class="btn btn-success"><span >Ajouter</span></button>
+  <button mat-button mat-dialog-close (click)="addFacture()" class="btn btn-success"><span >Ajouter</span></button>
   <button mat-button [mat-dialog-close]="true" cdkFocusInitial class="btn btn-danger">Annuler</button>
 </mat-dialog-actions>
 
